Remove multiple game buttons and add Login button

--- a/home.html
+++ b/home.html
@@ -74,13 +74,9 @@
 
     <div class="grid">
       <button class="btn" onclick="location.href='blackjack.html'">Blackjack<span>Play cards vs dealer</span></button>
-      <button class="btn" onclick="location.href='slots.html'">Slots<span>Spin for prizes</span></button>
-      <button class="btn" onclick="location.href='poker.html'">Poker<span>Multiplayer logic</span></button>
-      <button class="btn" onclick="location.href='hub.html'">Hub<span>Central dashboard</span></button>
-      <button class="btn" onclick="location.href='support.html'">Support Me<span>Tips & donations</span></button>
       <button class="btn" onclick="location.href='updates.html'">Updates<span>Latest changes</span></button>
-      <button class="btn" onclick="location.href='login.html'">Login<span>Account setup</span></button>
-      <button class="btn" onclick="location.href='messenger.html'">Messenger<span>Chat & calls</span></button>
+      <button class="btn" onclick="location.href='index.html'">Login<span>Account setup</span></button>
+      
     </div>
 
     <footer>Made by Nathan — modular, remixable, and ready to expand</footer>
